--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -885,6 +885,10 @@
     --tw-duration: 1000ms;
     transition-duration: 1000ms;
   }
+  .duration-10000 {
+    --tw-duration: 10000ms;
+    transition-duration: 10000ms;
+  }
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
